# yew-resize-split-view

./: Cargo.toml  LICENSE-MIT  README.md  index.html  index.scss
.github/workflows/: pr_check.yml
src/: app.rs  main.rs  split.rs  vertical.rs
src/components/: horizontal.rs  mod.rs  vertical.rs
